# VALOR

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
demo/: notebook_executor.py  notebook_imports.py
eval/: __init__.py  __main__.py  eval.py  executor.py  metrics.py  utils.py
eval/specialists/: api.py  utils.py
modules/GroundingDINO/: setup.py
modules/GroundingDINO/groundingdino/util/: inference.py
scripts/: download_gd_checkpoint.sh
valor/: __init__.py
valor/grounding_training/: generate_training_data.py  generate_training_data.sh  source_training_data.py  source_training_data.sh  train_gd.sh  utils.py
valor/grounding_training/Open-GroundingDino/: main.py
valor/grounding_training/Open-GroundingDino/config/: cfg_odvg.py
valor/grounding_training/Open-GroundingDino/models/GroundingDINO/: ms_deform_attn.py
valor/prompts/: api_prompt.txt  attribute_reward.txt  code_prompt.txt  logic_reward.txt  spatial_reward.txt  system_prompt.jinja
valor/reasoning_training/: dummy_executor.py  llm_training.sh  verifier_reward.py
valor/reasoning_training/data/: reasoning_data.jsonl
valor/reasoning_training/verl/verl/utils/dataset/: rl_dataset.py
